@@ -18,7 +18,13 @@
 
 package org.wso2.carbon.automation.engine.test.configuration;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+import org.testng.Assert;
+import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
+import org.wso2.carbon.automation.engine.FrameworkConstants;
+import org.wso2.carbon.automation.engine.frameworkutils.FrameworkPathUtil;
 import org.xml.sax.SAXException;
 
 import javax.xml.XMLConstants;
@@ -32,17 +38,37 @@ import java.io.IOException;
 import java.net.URL;
 
 public class ConfigurationXSDValidatorTest {
+    static final Log log = LogFactory.getLog(ConfigurationXSDValidatorTest.class);
+
+    File validateXsdFile;
+    File configXmlFile;
+
+    @BeforeClass
+    public void init() {
+        configXmlFile = new File(FrameworkPathUtil.
+                getSystemResourceLocation() + FrameworkConstants.CONFIGURATION_FILE_NAME);
+        validateXsdFile = new File(FrameworkPathUtil.
+                getSystemResourceLocation() + "automationXMLSchema.xsd");
+    }
 
     @Test(groups = "context.unit.test", description = "Upload aar service and verify deployment")
-    public void validateAutomationXml() throws SAXException, IOException {
-        URL schemaFile = new URL("http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd");
-        Source xmlFile = new StreamSource(new File("web.xml"));
+    public void validateAutomationXml() throws IOException, SAXException {
+        boolean validated=false;
+        URL schemaFile = validateXsdFile.toURI().toURL();
+        Source xmlFile = new StreamSource(configXmlFile);
         SchemaFactory schemaFactory = SchemaFactory
                 .newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI);
         Schema schema = schemaFactory.newSchema(schemaFile);
         Validator validator = schema.newValidator();
-        validator.validate(xmlFile);
-        System.out.println(xmlFile.getSystemId() + " is valid");
+        try {
+            validator.validate(xmlFile);
+            validated=true;
+
+        } catch (SAXException e) {
+            log.error(e.getStackTrace());
+            throw new SAXException(e);
+        }
+        Assert.assertTrue(validated);
 
     }
 }
